kubernetes/apps/fusion/app/service.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/yannh/kubernetes-json-schema/master/master-standalone/service-v1.json
apiVersion: v1
kind: Service
metadata:
  name: &app fusion
  labels:
    app.kubernetes.io/name: *app
spec:
  ports:
    - port: 80
  selector:
    app.kubernetes.io/name: *app
